--- a/index.html
+++ b/index.html
@@ -39,23 +39,17 @@
                       d="M3342 2493 l3 -158 310 0 310 0 3 158 3 157 -316 0 -316 0 3 -157z"
                     />
                     <path
-                      d="M1110 1855 l0 -155 320 0 320 0 0 155 0 155 -320 0 -320 0 0 -155z"
-                    />
+                      d="M1110 1855 l0 -155 320 0 320 0 0 155 0 155 -320 0 -320 0 0 -155z"/>
                     <path
-                      d="M2230 1855 l0 -155 315 0 315 0 0 155 0 155 -315 0 -315 0 0 -155z"
-                    />
+                      d="M2230 1855 l0 -155 315 0 315 0 0 155 0 155 -315 0 -315 0 0 -155z"/>
                     <path
-                      d="M3340 1855 l0 -155 315 0 315 0 0 155 0 155 -315 0 -315 0 0 -155z"
-                    />
+                      d="M3340 1855 l0 -155 315 0 315 0 0 155 0 155 -315 0 -315 0 0 -155z"/>
                     <path
-                      d="M1117 1383 c-4 -3 -7 -78 -7 -165 l0 -158 320 0 320 0 0 165 0 165 -313 0 c-173 0 -317 -3 -320 -7z"
-                    />
+                      d="M1117 1383 c-4 -3 -7 -78 -7 -165 l0 -158 320 0 320 0 0 165 0 165 -313 0 c-173 0 -317 -3 -320 -7z"/>
                     <path
-                      d="M2230 1225 l0 -165 315 0 315 0 0 165 0 165 -315 0 -315 0 0 -165z"
-                    />
+                      d="M2230 1225 l0 -165 315 0 315 0 0 165 0 165 -315 0 -315 0 0 -165z"/>
                     <path
-                      d="M3347 1383 c-4 -3 -7 -78 -7 -165 l0 -158 315 0 315 0 -2 163 -3 162 -306 3 c-168 1 -308 -1 -312 -5z"
-                    />
+                      d="M3347 1383 c-4 -3 -7 -78 -7 -165 l0 -158 315 0 315 0 -2 163 -3 162 -306 3 c-168 1 -308 -1 -312 -5z"/>
                   </g>
                 </svg>
               </div>
@@ -75,17 +69,14 @@
                     xmlns="http://www.w3.org/2000/svg"
                     width="25"
                     height="35"
-                    viewBox="0 0 24 24"
-                  >
-                    <rect x="0" fill="none" width="24" height="24" />
-        
-                    <g>
-                      <path d="M7 10l5 5 5-5" />
-                    </g>
+                    viewBox="0 0 24 24">
+                  <rect x="0" fill="none" width="24" height="24" />
+                  <g>
+                  <path d="M7 10l5 5 5-5" />
+                  </g>
                   </svg>
                 </div>
               </div>
-        
               <p id="current-date"></p>
         </main>
         <script src="script.js"></script>
